<resources>
    <string name="app_name">QuickReply</string>
    <string name="accessibility_description" />
    <string name="open_notification_settings">Open Notification Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="info">info</string>
    <string name="settings">Settings</string>
    <string name="menu">MENU</string>
    <string name="home">HOME</string>
    <string name="contacts">CONTACTS</string>
    <string name="statistics">STATISTICS</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="on">ON</string>
    <string name="quick_reply_text">Quick Reply text</string>
    <string name="message_to_be_sent_as_auto_reply">Message to be sent as auto reply</string>
    <string name="button_description">Button Description</string>
    <string name="select_your_text">Select your text</string>
    <string name="recyclerview_item_layout_image">RecyclerView Item Layout Image</string>
    <string name="todo">TODO</string>
    <string name="title_here">Title Here</string>
    <string name="this_is_a_description">This is a description.</string>
    <string name="auto_reply_to_everyone">Auto reply to Everyone.</string>
    <string name="auto_reply_messages_sent">Auto reply messages sent</string>
    <string name="quick_reply_text_to_send">Quick Reply Text to send</string>
    <string name="edit_your_message">Edit your message</string>
    <string name="save_message">Save Message</string>
    <string name="google_signin">Google Signin</string>
    <string name="google">Google</string>
</resources>